--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Hi, I'm <span class="color">Spondon</span> </h1>
             <h3>Junior Web Developer</h3>
