fixed some codes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="half-width">
             <h1>Hi, I'm <span class="color">Spondon</span> </h1>
             <h3>Junior Web Developer</h3>
-            <p>High experience in web design and development knowledge, producing and quality works. Here you will find
+            <p class="small-size">High experience in web design and development knowledge, producing and quality works.
+                Here you will find
                 my recent projects. Have fun!</p><br>
             <a class="link-button" target="_blank"
                 href="https://www.linkedin.com/in/shahriar-hossain-spondon-6788a920b/"> Hire me</a>
