--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
         <div class="half-width">
             <img src="spondon.png" alt="">
         </div>
+    </section>
+
+    <section class="about-me">
+
+        <div class="half-width">
+            <img src="images/spondon97.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <h3>Why choose me?</h3>
+            <p class="small-size">
+                Friendly and highly experienced developer to make or fix your website blink of an eye. You can have your
+                website well designed and developed very professionally so that you dive into the world of magical html
+                and css world.
+            </p><br>
+            <a class="link-button" target="_blank" href="images/cv.pdf">Download CV</a>
+        </div>
 
 
     </section>
