--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                     popular Javascript framework
                     called
                     Vue
-                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p><br>
             </div>
             <div id="remote-web-developer" class="experience-item">
                 <h2>Remote Web Developer</h2>
                 <h3 class="color">2022-Present | Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
-                </p>
+                </p><br>
             </div>
         </div>
 
